Added title and description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Klaudia Warmus - HTML5 Boilerplate</title>
+    <meta name="description" content="This is my HTML boilerplate">
 </head>
 
 <body>
