--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="manifest" href="manifest.json">
 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/screen.css">
 
 </head>
 
@@ -30,6 +32,11 @@
         distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi
         sed, facere quo nobis a blanditiis.
     </p>
+    <figure>
+        <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
+        <figcaption>Yawning cat. Photo by Martina Misar</figcaption>
+    </figure>
+
     <h3>
         Heading 3
     </h3>
@@ -51,6 +58,40 @@
     <p>
         Add an unorderd list with 3 list items here
     </p>
+    <h2>Table</h2>
+    <table>
+        <tr>
+            <th>Country</th>
+            <th>Capital</th>
+            <th>Population</th>
+            <th>Language</th>
+        </tr>
+        <tr>
+            <td>USA</td>
+            <td>Washington DC</td>
+            <td>309 million</td>
+            <td>English</td>
+        </tr>
+        <tr>
+            <td>Sweden</td>
+            <td>Stockholm</td>
+            <td>9 million</td>
+            <td>Swedish</td>
+        </tr>
+        <tr>
+            <td>France</td>
+            <td>Paris</td>
+            <td>10 million</td>
+            <td>French</td>
+        </tr>
+        <tr>
+            <td>Germany</td>
+            <td>Berlin</td>
+            <td>9 million</td>
+            <td>German</td>
+        </tr>
+
+    </table>
     <hr>
     <footer>
         <p>By <strong>Your name</strong></p>
