Added media queries

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     <h3>
         Styling lists is easy
     </h3>
+    <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, temporibus?</li>
+        <li>Reprehenderit libero illum consectetur facilis soluta illo explicabo iusto eum.</li>
+        <li>Voluptate, eligendi nemo veniam quos dolorum delectus fugit at quisquam.</li>
+    </ul>
     <p>
         Add an unorderd list with 3 list items here
     </p>
