Added table styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
         <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the
             combined knowledge and effort of 100s of developers, all in one little package.</p>
     </header>
-    <h2>
+    <nav>
+        <ul>
+            <li><a href="#heading2">Heading 2</a></li>
+            <li><a href="#heading3">Heading 3</a></li>
+            <li><a href="#lists">Lists</a></li>
+            <li><a href="#table">Table</a></li>
+        </ul>
+    </nav>
+    <h2 id="heading2">
         Heading 2
     </h2>
     <p>
@@ -37,7 +45,7 @@
         <figcaption>Yawning cat. Photo by Martina Misar</figcaption>
     </figure>
 
-    <h3>
+    <h3 id="heading3">
         Heading 3
     </h3>
     <p>
@@ -52,7 +60,7 @@
             specifies the location (in the form of a URI) where the quote has come from.
         </p>
     </blockquote>
-    <h3>
+    <h3 id="lists">
         Styling lists is easy
     </h3>
     <ul>
@@ -63,7 +71,7 @@
     <p>
         Add an unorderd list with 3 list items here
     </p>
-    <h2>Table</h2>
+    <h3 id="table">Table</h3>
     <table>
         <tr>
             <th>Country</th>
@@ -71,7 +79,7 @@
             <th>Population</th>
             <th>Language</th>
         </tr>
-        <tr>
+        <tr class="odd">
             <td>USA</td>
             <td>Washington DC</td>
             <td>309 million</td>
@@ -83,7 +91,7 @@
             <td>9 million</td>
             <td>Swedish</td>
         </tr>
-        <tr>
+        <tr class="odd">
             <td>France</td>
             <td>Paris</td>
             <td>10 million</td>
@@ -99,7 +107,7 @@
     </table>
     <hr>
     <footer>
-        <p>By <strong>Your name</strong></p>
+        <p>By <strong>Klaudia Warmus</strong></p>
     </footer>
 </body>
 
